# PawikanSentinel

./: .env.example  .env.pi.example  .gitignore  .vercelignore  DEPLOYMENT_RPI.md  GEMINI.md  INSTALL_AND_SETUP.md  LICENSE  ML_TERMINOLOGY.md  README.md  RPI_SETUP.md  TESTING_GUIDE.md  UI_REVAMP_PLAN.md  WEB_DASHBOARD_PLAN.md  best-int8.tflite  build-css.sh  config.toml  convert_to_tflite.py  cookies.txt  database.py  deploy_pi.sh  inference.py  inference_pi.py  inference_service.py  inference_service_pi.py  inspect_model.py  install.sh  logging_config.json  main.py  models.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements-inference.txt  requirements-pi.txt  requirements-web.txt  requirements.txt  run-inference.sh  run-web.sh  (+7 more)
api/: index.py
case/: README.md  pawikan-case.service
case/daemon/: fan_manager.py  oled_manager.py  pawikan_daemon.py  rgb_manager.py
config/: config.example.toml  pawikan-dashboard.service  pawikan-inference.service
contextfiles/: context.sh  design.md  requirements.md  tasks.md
contexts/: api.md  architecture.md  auth.md  contacts.md  dashboard.md  database.md  pi_deployment.md  security.md
deployments/: logrotate.conf  pawikan-sentinel.service
deployments/pi-inference/: .env.pi.example  inference_pi.py  requirements-pi.txt
docs/: DEVELOPMENT.md  diagnose_rtsp_explanation.md  scaling.md  setup.md
docs/contexts/: contacts.md  inference.md  pi_deployment.md
docs/pi-inference/: README.md  deploy_pi.sh  inference_pi.py  monitor_pi.py
exp/: events.out.tfevents.1753286663.61c1f07a4f79.4625.0  opt.yaml  results.csv
exp/weights/: best.pt  last.pt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  app.css
notebooks/: GEMINI.md  onnx_to_tflite_conversion.ipynb  training_and_optimization.ipynb
pi-inference/: inference_service_pi.py  manage_pi.sh
routers/: analytics.py  auth.py  cameras.py  contacts.py  detections.py
scripts/: backup.sh  create_admin.py  diagnose_model.py  diagnose_rtsp.py  download_datasets.sh  export_float32.py  improved_detection.py  live_detection.py  manage.sh  quantize_model.py  simulation_mode.py  test_image.sh  test_model.sh  test_rtsp.py  turtle_rtsp_kimi.py  verify_dataset.py
scripts/preprocessing/: combine_datasets.py  (+2 more)
src/: config.py  logging.py  main.py
stitch-design/: color-palette.md  design-system.md
(+125 files in other folders)
