[project]
name = "sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.103.2",
    "uvicorn==0.23.2",
    "python-multipart==0.0.20",
    # Auth & sessions
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "itsdangerous==2.2.0",
    # Templates & utilities
    "jinja2==3.1.2",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "slowapi==0.1.9",
    "websockets==11.0.3",
    # HTTP requests (SMS sender)
    "requests>=2.31.0",
    # Data models
    "pydantic>=2.0",
    # Inference — YOLO11 turtle detection + camera capture
    "ultralytics>=8.3.0,<8.4.0",
    "opencv-python-headless>=4.8.0",
    "numpy<2",
    "huggingface_hub>=0.20.0",
    "psutil>=5.9.0",
    # Explicitly managed torch dependencies (pinned to CPU index)
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
